2006-12-01 Raphael Neider <rneider AT web.de>

	* src/pic/pcode.c (register_reassign): do not crash on recursive code
	  but emit warning (recursion is not supported for pic14)

2006-11-30 Frieder Ferlemann <Frieder.Ferlemann AT web.de>

	* src/mcs51/peeph.def: added 101.a,b (moves to int/long xdata)
	* doc/sdccman.lyx: various small changes, acknowledged Sourceforge

2006-11-30 Raphael Neider <rneider AT web.de>

	* src/pic/device.c (dump_sfr): always emit symbols
	* src/pic/glue.c (pic14printPublics): fixed typo

2006-11-30 Raphael Neider <rneider AT web.de>

	* src/pic/device.c (create_pic,ram_map): add memRange entries to PIC
	  (pic14_getSharebankSize, pic14_getSharebankAddress): replaced with
	  (pic14_hasSharebank,pic14_isShared,pic14_allRAMShared,
	   pic14_getSharedStack): NEW, evaluate the memRange entries to locate
	   a sharebank, use a non-shared bank for the stack if none available
	* src/pic/device.h (struct memRange): added linked list next field,
	  added prototypes for above functions
	* src/pic/ralloc.c (initStack): handle shared and banked stacks,
	  (typeRegWithIdx): accept fixed and unfixed stack registers
	* src/pic/pcode.c (pCodeInitRegisters): use new functions to create
	  the stack, handle shared and banked stack (except for WSAVE),
	  (insertBankSel): removed useless optimization (will never fire),
	  (FixRegisterBanking): added optimization for devices with only one
	  possibly aliased bank of memory, like 16f84
	* src/pic/glue.c (pic14_constructAbsMap): back to udata_ovr, as some
	  devices have no SHAREBANK in the linker script
	* device/include/pic/pic14devices.txt: documented memmap
	* device/lib/pic/libdev/Makefile.in: removed --stack-loc again

2006-11-30 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/hc08/gen.c (transferRegReg, loadRegFromAop, forceStackedAop,
	  storeRegToAop, freeAsmop, genPlusIncr, genPlus, genPointerGetSetOfs,
	  genAnd, genOr, genXor, genLeftShiftLiteral, genRightShiftLiteral,